// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils getVp() should calculate VP for EVM address on evm protocol 1`] = `
Object {
  "vp": 21.55404462002206,
  "vp_by_strategy": Array [
    0,
    9.998985610441185,
    11.506635026590818,
    0.04842398299005922,
  ],
  "vp_state": "final",
}
`;

exports[`utils getVp() should calculate VP for EVM address on mixed protocol 1`] = `
Object {
  "vp": 10.998985610441185,
  "vp_by_strategy": Array [
    1,
    9.998985610441185,
  ],
  "vp_state": "final",
}
`;

exports[`utils getVp() should calculate VP for Starknet address on evm protocol 1`] = `
Object {
  "vp": 0,
  "vp_by_strategy": Array [
    0,
  ],
  "vp_state": "final",
}
`;

exports[`utils getVp() should calculate VP for Starknet address on mixed protocol 1`] = `
Object {
  "vp": 1,
  "vp_by_strategy": Array [
    1,
    0,
  ],
  "vp_state": "final",
}
`;
